# fastapi-server-template

./: .env.local  .env.production  .env.staging  .gitignore  README.md  pyproject.toml
app/: config.py  logger.py  main.py
main/: .env.local  .env.production  pyproject.toml  start.sh
main/src/: app.py  config.py  logger.py
main/src/router/: __init__.py
main/src/util/: __init__.py
