[project]
name = "fastapi-server"
version = "0.1.0"
description = "Server - A FastAPI-based server"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]

[tool.black]
line-length = 120

[tool.pyright]
extraPaths = ["src"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"